--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>ORBITRON TERMINAL v7.1</title>
+    <title>ORBITRON TERMINAL v7.2</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Share+Tech+Mono&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <style>
@@ -28,13 +28,12 @@
         #chat-box { height: 400px; overflow-y: auto; margin-bottom: 20px; display: flex; flex-direction: column; padding-right: 10px; }
         .msg { background: rgba(0, 242, 255, 0.05); border-left: 2px solid var(--n); padding: 10px; margin-bottom: 8px; animation: msgReveal 0.3s ease-out; }
         @keyframes msgReveal { from { opacity: 0; transform: translateX(-10px); } to { opacity: 1; transform: translateX(0); } }
-        /* msg-nick теперь получает цвет через JS */
         .msg-nick { font-weight: bold; text-transform: uppercase; }
         .msg-time { opacity: 0.5; font-size: 10px; margin-right: 5px; }
 
         input { background: rgba(0,0,0,0.8); border: 1px solid var(--n); color: #fff; padding: 14px; width: 100%; font-family: inherit; outline: none; margin-bottom: 10px; }
-        button { background: transparent; color: var(--n); border: 1px solid var(--n); padding: 12px; width: 100%; cursor: pointer; font-family: 'Orbitron', sans-serif; font-size: 11px; text-transform: uppercase; }
-        button:hover { background: var(--n); color: #000; }
+        button { background: transparent; color: var(--n); border: 1px solid var(--n); padding: 12px; width: 100%; cursor: pointer; font-family: 'Orbitron', sans-serif; font-size: 11px; text-transform: uppercase; transition: 0.2s; }
+        button:hover { background: var(--n); color: #000; box-shadow: 0 0 15px var(--n); }
 
         #radar { width: 100%; height: 120px; border: 1px solid var(--n); margin-bottom: 20px; position: relative; overflow: hidden; background: black; }
         #radar-sweep { position: absolute; width: 200%; height: 200%; top: -50%; left: -50%; background: conic-gradient(from 0deg, var(--n) 0deg, transparent 90deg); opacity: 0.2; animation: rotate 4s linear infinite; }
@@ -80,29 +79,29 @@
 </div>
 
 <script>
+// Весь JS код теперь строго здесь, без примеси HTML тегов внутри
 (function() {
     const URL = 'https://ebjsxlympwocluxgmwcu.supabase.co';
     const KEY = 'sb_publishable_8HhPj3Y8g5V7Np8Vy5xbzQ_2B7LjTkj';
-    let sb = window.supabase.createClient(URL, KEY);
+    const sb = window.supabase.createClient(URL, KEY);
 
-    // НОВАЯ ФУНКЦИЯ: Генерация цвета ника
+    // Цветные ники
     const getNickColor = (str) => {
         let hash = 0;
-        for (let i = 0; i < str.length; i++) {
-            hash = str.charCodeAt(i) + ((hash << 5) - hash);
-        }
-        // Ограничиваем цвета ярким неоновым спектром
+        for (let i = 0; i < str.length; i++) hash = str.charCodeAt(i) + ((hash << 5) - hash);
         return `hsl(${Math.abs(hash) % 360}, 100%, 75%)`;
     };
 
     const triggerGlitch = () => {
         const t = document.getElementById('main-terminal');
-        t.classList.add('glitch-active');
-        setTimeout(() => t.classList.remove('glitch-active'), 400);
+        if(t) {
+            t.classList.add('glitch-active');
+            setTimeout(() => t.classList.remove('glitch-active'), 400);
+        }
     };
 
     window.addTodo = () => {
-        const i = document.getElementById('todo-in'); if(!i.value) return;
+        const i = document.getElementById('todo-in'); if(!i || !i.value) return;
         const d = document.createElement('div');
         d.className = 'msg'; d.style.fontSize='11px'; d.innerHTML = `> ${i.value.toUpperCase()}`;
         d.onclick = function(){ this.remove(); };
@@ -116,34 +115,39 @@
     };
 
     sb.auth.onAuthStateChange((_, s) => {
-        document.getElementById('auth-ui').classList.toggle('hidden', !!s);
-        document.getElementById('chat-ui').classList.toggle('hidden', !s);
-        if(s) { load(true); if(Notification.permission!=="denied") Notification.requestPermission(); }
+        const aUI = document.getElementById('auth-ui'), cUI = document.getElementById('chat-ui');
+        if(aUI && cUI) {
+            aUI.classList.toggle('hidden', !!s);
+            cUI.classList.toggle('hidden', !s);
+            if(s) { 
+                load(true); 
+                document.getElementById('sys-status').innerText = "SYSTEM: ONLINE";
+                if(Notification.permission!=="denied") Notification.requestPermission(); 
+            }
+        }
     });
 
     async function load(full=false) {
         const { data } = await sb.from('comments').select('*').order('created_at', {ascending: true});
         const b = document.getElementById('chat-box');
-        if(full && data) { b.innerHTML = ''; data.forEach(appendMsg); b.scrollTop = b.scrollHeight; }
+        if(full && data && b) { b.innerHTML = ''; data.forEach(appendMsg); b.scrollTop = b.scrollHeight; }
     }
 
     function appendMsg(m) {
         const b = document.getElementById('chat-box');
+        if(!b) return;
         const d = document.createElement('div');
         d.className = 'msg';
         const t = m.created_at ? new Date(m.created_at).toLocaleTimeString([], {hour:'2-digit', minute:'2-digit'}) : "--:--";
-        
-        // Используем функцию цвета для ника
-        const userColor = getNickColor(m.nickname);
-        
-        d.innerHTML = <div><span class="msg-time">[${t}]</span><span class="msg-nick" style="color: ${userColor}">${m.nickname}:</span> ${m.message}</div>;
+        const color = getNickColor(m.nickname || 'Unknown');
+        d.innerHTML = <div><span class="msg-time">[${t}]</span><span class="msg-nick" style="color:${color}">${m.nickname}:</span> ${m.message}</div>;
         b.appendChild(d); b.scrollTop = b.scrollHeight;
     }
 
     window.send = async () => {
         const i = document.getElementById('msg-in');
         const { data: { user } } = await sb.auth.getUser();
-        if(i.value && user) {
+        if(i && i.value && user) {
             const v = i.value, n = user.email.split('@')[0];
             i.value = ''; appendMsg({nickname:n, message:v});
             await sb.from('comments').insert([{message:v, nickname:n}]);
@@ -158,12 +162,13 @@
         }
     }).subscribe();
 
-    // CANVAS ENGINE (БЕЗ ИЗМЕНЕНИЙ)
+    // CANVAS ENGINE
     const canvas = document.getElementById('canvas-bg');
     const ctx = canvas.getContext('2d');
     let stars = [], stones = [], astronauts = [], ufo = { x: -100, y: 150 };
 
     function init() {
+        if(!canvas) return;
         canvas.width = window.innerWidth; canvas.height = window.innerHeight;
         stars = []; stones = []; astronauts = [];
         for(let i=0; i<100; i++) stars.push({x:Math.random()*canvas.width, y:Math.random()*canvas.height, r:Math.random()*1.5});
@@ -197,7 +202,8 @@
             ctx.save(); ctx.translate(a.x,a.y); ctx.rotate(a.rot); ctx.fillStyle='#eee'; ctx.fillRect(-8,-10,16,20); ctx.restore();
         });
         drawUFO();
-        document.getElementById('clock').innerText = new Date().toLocaleTimeString();
+        const clk = document.getElementById('clock');
+        if(clk) clk.innerText = new Date().toLocaleTimeString();
         requestAnimationFrame(loop);
     }
     init(); loop(); window.onresize = init;
