--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>ORBITRON v8.8 - FIXED</title>
+    <title>ORBITRON v8.9 - SUPERNOVA</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Share+Tech+Mono&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <style>
         :root {
             --n: #00f2ff; --p: #ff00ff; --bg: #01050a;
-            --glass: rgba(0, 242, 255, 0.05);
+            --glass: rgba(0, 242, 255, 0.04);
             --border: rgba(0, 242, 255, 0.2);
         }
 
@@ -16,156 +16,153 @@
         body { 
             background: var(--bg); color: var(--n); 
             font-family: 'Share Tech Mono', monospace; 
-            height: 100vh; width: 100vw; overflow: hidden; 
+            height: 100vh; overflow: hidden; 
         }
 
         #starfield { position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 1; }
 
-        /* ОСНОВНОЙ КОНТЕЙНЕР - ТЕПЕРЬ СТРОГО 100% ВЫСОТЫ */
         .viewport {
             position: relative; z-index: 10;
             display: grid;
-            grid-template-columns: 300px 1fr 250px;
-            grid-template-rows: 60px 1fr 80px;
-            height: 100vh; width: 100vw;
-            gap: 15px; padding: 15px;
+            grid-template-columns: 320px 1fr;
+            grid-template-rows: 60px 1fr;
+            height: 100vh; gap: 20px; padding: 20px;
         }
 
         .panel {
             background: var(--glass);
-            backdrop-filter: blur(8px);
+            backdrop-filter: blur(12px);
             border: 1px solid var(--border);
             display: flex; flex-direction: column;
-            overflow: hidden; /* Важно: не дает контенту раздувать панель */
+            overflow: hidden;
+            box-shadow: 0 0 30px rgba(0,0,0,0.5);
         }
 
         /* HEADER */
-        .header { grid-column: 1 / 4; display: flex; align-items: center; justify-content: space-between; padding: 0 20px; }
+        .header { grid-column: 1 / 3; display: flex; align-items: center; justify-content: space-between; padding: 0 20px; background: none; border: none; border-bottom: 1px solid var(--border); }
 
-        /* ЧАТ - ИСПРАВЛЕННЫЙ ВЫХОД ЗА ЭКРАН */
-        .chat-main { grid-column: 2; grid-row: 2; position: relative; }
-        
+        /* ЧАТ */
+        .chat-panel { grid-column: 2; display: flex; flex-direction: column; }
         #chat-stream {
-            flex: 1; /* Занимает всё доступное место в панели */
-            overflow-y: auto; /* Скролл внутри */
-            padding: 20px;
+            flex: 1; overflow-y: auto; padding: 20px;
             display: flex; flex-direction: column; gap: 12px;
-            scrollbar-width: thin; scrollbar-color: var(--n) transparent;
+            scrollbar-width: none;
+        }
+        .msg { animation: fadeIn 0.3s ease; }
+        @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } }
+        .msg-nick { font-size: 9px; color: var(--p); font-family: 'Orbitron'; margin-bottom: 3px; letter-spacing: 1px; }
+        .msg-text { background: rgba(0,242,255,0.05); padding: 10px 15px; border-radius: 0 10px 10px 10px; border: 1px solid rgba(0,242,255,0.1); color: #e0faff; }
+
+        /* TODO С ЭФФЕКТАМИ */
+        .todo-panel { grid-column: 1; }
+        #todo-list { flex: 1; overflow-y: auto; padding: 15px; }
+        .task { 
+            padding: 10px; border-bottom: 1px solid rgba(0,242,255,0.1); 
+            cursor: pointer; transition: 0.3s; font-size: 12px;
+            display: flex; align-items: center;
+        }
+        .task:before { content: ">"; margin-right: 10px; color: var(--p); }
+        .task:hover { 
+            color: var(--p); 
+            background: rgba(255,0,255,0.1);
+            text-decoration: line-through;
+            padding-left: 20px;
+            border-bottom-color: var(--p);
         }
 
-        .msg { animation: slideIn 0.2s ease; max-width: 90%; }
-        @keyframes slideIn { from { opacity: 0; transform: translateX(-5px); } }
-        .msg-nick { font-size: 9px; color: var(--p); font-family: 'Orbitron'; margin-bottom: 2px; }
-        .msg-text { background: rgba(255,255,255,0.03); border-left: 2px solid var(--n); padding: 8px 12px; color: #fff; }
+        /* INPUTS */
+        .input-bar { display: flex; gap: 10px; padding: 15px; border-top: 1px solid var(--border); background: rgba(0,0,0,0.2); }
+        input { 
+            background: rgba(0,0,0,0.5); border: 1px solid var(--border); 
+            color: #fff; padding: 12px; font-family: inherit; flex: 1; outline: none; 
+        }
+        input:focus { border-color: var(--n); box-shadow: 0 0 10px var(--glass); }
+        button { 
+            background: transparent; border: 1px solid var(--n); color: var(--n); 
+            padding: 10px 20px; cursor: pointer; font-family: 'Orbitron'; font-size: 10px; transition: 0.3s;
+        }
+        button:hover { background: var(--n); color: #000; box-shadow: 0 0 20px var(--n); }
 
-        /* ИНПУТЫ */
-        .input-bar { display: flex; gap: 10px; padding: 15px; background: rgba(0,0,0,0.3); border-top: 1px solid var(--border); }
-        input { background: rgba(0,0,0,0.4); border: 1px solid var(--border); color: #fff; padding: 10px; font-family: inherit; flex: 1; outline: none; }
-        button { background: transparent; border: 1px solid var(--n); color: var(--n); padding: 8px 15px; cursor: pointer; font-family: 'Orbitron'; font-size: 10px; }
-        button:hover { background: var(--n); color: #000; }
-
-        /* TODO */
-        .todo-side { grid-column: 1; grid-row: 2; }
-        #todo-cont { flex: 1; overflow-y: auto; padding: 10px; }
-        .t-item { font-size: 11px; padding: 6px; border-bottom: 1px solid rgba(0,242,255,0.1); cursor: pointer; }
-
-        /* FOOTER LOGS */
-        .logs-bot { grid-column: 1 / 4; grid-row: 3; font-size: 10px; opacity: 0.6; padding: 10px; display: flex; flex-direction: column-reverse; }
-
-        #auth-screen { position: fixed; inset: 0; z-index: 100; background: var(--bg); display: flex; align-items: center; justify-content: center; }
+        #auth-gate { position: fixed; inset: 0; z-index: 100; background: var(--bg); display: flex; align-items: center; justify-content: center; }
         .hidden { display: none !important; }
+
+        /* CRT Filter */
+        .viewport::after {
+            content: ""; position: fixed; inset: 0; pointer-events: none;
+            background: linear-gradient(rgba(18,16,16,0) 50%, rgba(0,0,0,0.1) 50%);
+            background-size: 100% 4px; z-index: 1000; opacity: 0.1;
+        }
     </style>
 </head>
 <body>
 
 <canvas id="starfield"></canvas>
 
-<div id="auth-screen">
-    <div style="width: 350px; text-align: center; border: 1px solid var(--n); padding: 40px; background: rgba(0,242,255,0.02);">
-        <h2 style="font-family:'Orbitron'; margin-bottom:20px;">SYSTEM_LOGIN</h2>
+<div id="auth-gate">
+    <div style="width: 350px; text-align: center; border: 1px solid var(--n); padding: 50px; backdrop-filter: blur(10px);">
+        <h1 style="font-family:'Orbitron'; margin-bottom:30px; letter-spacing:5px;">OMNI_v8.9</h1>
         <input type="email" id="email" placeholder="PILOT_ID" style="width:100%; margin-bottom:10px;">
-        <input type="password" id="pass" placeholder="PASS_KEY" style="width:100%; margin-bottom:20px;">
-        <button onclick="App.Auth('in')" style="width:100%;">ACCESS</button>
+        <input type="password" id="pass" placeholder="PASSWORD" style="width:100%; margin-bottom:25px;">
+        <button onclick="Core.Auth('in')" style="width:100%;">INITIALIZE</button>
     </div>
 </div>
 
 <div class="viewport">
-    <header class="panel header">
-        <div style="font-family:'Orbitron'; font-weight:700;">ORBITRON_v8.8</div>
+    <header class="header">
+        <div style="font-family:'Orbitron'; font-weight:700; letter-spacing:3px;">ORBITRON_SYSTEM</div>
         <div id="clock">00:00:00</div>
     </header>
 
-    <aside class="panel todo-side">
-        <div style="padding:10px; font-size:10px; color:var(--p); border-bottom:1px solid var(--border)">MISSION_LOGS</div>
-        <div class="input-bar" style="padding:10px;">
-            <input type="text" id="todo-in" placeholder="+ ADD...">
+    <aside class="panel todo-panel">
+        <div style="padding:15px; font-size:10px; color:var(--p); border-bottom:1px solid var(--border); letter-spacing:2px;">MISSION_LOGS</div>
+        <div class="input-bar">
+            <input type="text" id="todo-in" placeholder="NEW TASK...">
         </div>
-        <div id="todo-cont"></div>
+        <div id="todo-list"></div>
     </aside>
 
-    <main class="panel chat-main">
-        <div style="padding:10px; font-size:10px; color:var(--p); border-bottom:1px solid var(--border)">COMMS_CHANNEL</div>
+    <main class="panel chat-panel">
+        <div style="padding:15px; font-size:10px; color:var(--p); border-bottom:1px solid var(--border); letter-spacing:2px;">SECURE_COMMS</div>
         <div id="chat-stream"></div>
         <div class="input-bar">
-            <input type="text" id="chat-in" placeholder="TRANSMIT MESSAGE...">
-            <button onclick="App.Chat.send()">SEND</button>
+            <input type="text" id="chat-in" placeholder="ENTER TELEMETRY DATA...">
+            <button onclick="Core.Chat.send()">SEND</button>
         </div>
     </main>
-
-    <aside class="panel">
-        <div style="padding:10px; font-size:10px; color:var(--p); border-bottom:1px solid var(--border)">TELEMETRY</div>
-        <div id="tele-data" style="padding:15px; font-size:11px; line-height:2;">
-            O2: 98%<br>HULL: OK<br>TEMP: -270C
-        </div>
-    </aside>
-
-    <footer class="panel logs-bot" id="sys-logs">
-        <div>[SYSTEM] INITIALIZING_OMNI_CORE...</div>
-    </footer>
 </div>
 
 <script>
-const App = {
+const Core = {
     sb: window.supabase.createClient('https://ebjsxlympwocluxgmwcu.supabase.co', 'sb_publishable_8HhPj3Y8g5V7Np8Vy5xbzQ_2B7LjTkj'),
     user: null,
 
     init() {
         this.Canvas.init();
-        this.ListenAuth();
-        this.UI.todo();
+        this.AuthListener();
+        this.UI();
         setInterval(() => document.getElementById('clock').innerText = new Date().toLocaleTimeString(), 1000);
-        this.Log("CORE_LOADED");
         this.loop();
-    },
-
-    Log(m) {
-        const l = document.getElementById('sys-logs');
-        const d = document.createElement('div');
-        d.innerHTML = `[SYSTEM] ${m}`;
-        l.prepend(d);
-        if(l.children.length > 5) l.lastChild.remove();
     },
 
     Auth: async (t) => {
         const e = document.getElementById('email').value, p = document.getElementById('pass').value;
-        const { error } = await (t === 'in' ? App.sb.auth.signInWithPassword({email:e, password:p}) : App.sb.auth.signUp({email:e, password:p}));
+        const { error } = await (t === 'in' ? Core.sb.auth.signInWithPassword({email:e, password:p}) : Core.sb.auth.signUp({email:e, password:p}));
         if(error) alert(error.message);
     },
 
-    ListenAuth() {
+    AuthListener() {
         this.sb.auth.onAuthStateChange((_, s) => {
             if(s) {
                 this.user = s.user;
-                document.getElementById('auth-screen').classList.add('hidden');
+                document.getElementById('auth-gate').classList.add('hidden');
                 this.Chat.load();
-                this.Log("PILOT_CONNECTED: " + this.user.email);
             }
         });
     },
 
     Chat: {
         async load() {
-            const { data } = await App.sb.from('comments').select('*').order('created_at', {ascending: true});
+            const { data } = await Core.sb.from('comments').select('*').order('created_at', {ascending: true});
             if(data) data.forEach(m => this.render(m));
         },
         render(m) {
@@ -178,26 +175,31 @@ const App = {
         },
         async send() {
             const i = document.getElementById('chat-in');
-            if(!i.value || !App.user) return;
-            const n = App.user.email.split('@')[0], v = i.value; i.value = '';
-            this.render({nickname: n, message: v});
-            await App.sb.from('comments').insert([{message: v, nickname: n}]);
+            if(!i.value || !Core.user) return;
+            const n = Core.user.email.split('@')[0], v = i.value; 
+            i.value = '';
+            this.render({nickname: n, message: v, created_at: new Date()});
+            await Core.sb.from('comments').insert([{message: v, nickname: n}]);
         }
     },
 
-    UI: {
-        todo() {
-            const i = document.getElementById('todo-in');
-            i.onkeypress = (e) => {
-                if(e.key === 'Enter' && i.value) {
-                    const d = document.createElement('div');
-                    d.className = 't-item'; d.innerText = '> ' + i.value.toUpperCase();
-                    d.onclick = () => d.remove();
-                    document.getElementById('todo-cont').prepend(d);
-                    i.value = '';
-                }
-            };
-        }
+    UI() {
+        // Todo Enter
+        const ti = document.getElementById('todo-in');
+        ti.onkeypress = (e) => {
+            if(e.key === 'Enter' && ti.value) {
+                const d = document.createElement('div');
+                d.className = 'task'; d.innerText = ti.value.toUpperCase();
+                d.onclick = () => d.remove();
+                document.getElementById('todo-list').prepend(d);
+                ti.value = '';
+            }
+        };
+        // Chat Enter (Fixed!)
+        const ci = document.getElementById('chat-in');
+        ci.onkeypress = (e) => {
+            if(e.key === 'Enter') Core.Chat.send();
+        };
     },
 
     Canvas: {
@@ -205,8 +207,13 @@ const App = {
             this.cvs = document.getElementById('starfield');
             this.ctx = this.cvs.getContext('2d');
             this.res(); window.onresize = () => this.res();
-            this.stars = Array.from({length: 150}, () => ({x:Math.random()*this.cvs.width, y:Math.random()*this.cvs.height, s:Math.random()*2}));
-            this.ufo = {x: -100, y: 350, p: []};
+            this.stars = Array.from({length: 200}, () => ({x:Math.random()*this.cvs.width, y:Math.random()*this.cvs.height, s:Math.random()*2, v:Math.random()*0.5}));
+            // Asteroids Belt
+            this.rocks = Array.from({length: 12}, () => ({
+                x: Math.random()*this.cvs.width, y: Math.random()*this.cvs.height,
+                s: 5 + Math.random()*15, r: Math.random()*Math.PI*2, vs: 0.01 + Math.random()*0.02
+            }));
+            this.ufo = {x: -100, y: 400, p: []};
         },
         res() { this.cvs.width = window.innerWidth; this.cvs.height = window.innerHeight; },
         draw() {
@@ -216,50 +223,64 @@ const App = {
             // Stars
             ctx.fillStyle = '#fff';
             this.stars.forEach(s => {
+                s.x -= s.v; if(s.x < 0) s.x = cvs.width;
                 ctx.globalAlpha = Math.random();
                 ctx.beginPath(); ctx.arc(s.x, s.y, s.s/2, 0, 7); ctx.fill();
             });
             ctx.globalAlpha = 1;
 
-            // Planet
-            const px = cvs.width * 0.8, py = cvs.height * 0.25;
-            let g = ctx.createRadialGradient(px-20, py-20, 5, px, py, 100);
-            g.addColorStop(0, '#00f2ff'); g.addColorStop(1, '#000810');
+            // Asteroids
+            ctx.strokeStyle = 'rgba(0,242,255,0.3)';
+            this.rocks.forEach(r => {
+                r.x -= 0.3; r.r += r.vs;
+                if(r.x < -50) r.x = cvs.width + 50;
+                ctx.save(); ctx.translate(r.x, r.y); ctx.rotate(r.r);
+                ctx.beginPath();
+                for(let i=0; i<6; i++) {
+                    let a = i * Math.PI/3;
+                    let rad = r.s + (Math.sin(i*2)*2);
+                    ctx.lineTo(Math.cos(a)*rad, Math.sin(a)*rad);
+                }
+                ctx.closePath(); ctx.stroke(); ctx.restore();
+            });
+
+            // Enhanced Planet
+            const px = cvs.width * 0.85, py = cvs.height * 0.25;
+            // Glow
+            let glow = ctx.createRadialGradient(px, py, 100, px, py, 150);
+            glow.addColorStop(0, 'rgba(0,242,255,0.2)'); glow.addColorStop(1, 'transparent');
+            ctx.fillStyle = glow; ctx.beginPath(); ctx.arc(px, py, 150, 0, 7); ctx.fill();
+            // Planet body
+            let g = ctx.createRadialGradient(px-30, py-30, 10, px, py, 100);
+            g.addColorStop(0, '#00f2ff'); g.addColorStop(0.5, '#004466'); g.addColorStop(1, '#01050a');
             ctx.fillStyle = g; ctx.beginPath(); ctx.arc(px, py, 100, 0, 7); ctx.fill();
+            // Rings
+            ctx.strokeStyle = 'rgba(0,242,255,0.1)';
+            ctx.beginPath(); ctx.ellipse(px, py, 180, 40, 0.4, 0, 7); ctx.stroke();
 
-            // UFO (Fixed Logic)
+            // UFO
             let u = this.ufo;
-            u.x += 1.5; if(u.x > cvs.width + 100) u.x = -100;
-            let uy = u.y + Math.sin(Date.now()/500)*30;
-
-            // Trail
-            if(Date.now() % 4 === 0) u.p.push({x: u.x - 40, y: uy, a: 1});
+            u.x += 1.2; if(u.x > cvs.width + 100) u.x = -100;
+            let uy = u.y + Math.sin(Date.now()/600)*40;
+            if(Date.now() % 5 === 0) u.p.push({x: u.x - 40, y: uy, a: 1});
             u.p.forEach((p, idx) => {
                 p.x -= 1; p.a -= 0.01;
                 ctx.fillStyle = `rgba(0, 242, 255, ${p.a})`;
                 ctx.beginPath(); ctx.arc(p.x, p.y, 2, 0, 7); ctx.fill();
                 if(p.a <= 0) u.p.splice(idx, 1);
             });
-
-            // Hull
-            ctx.fillStyle = '#111'; ctx.beginPath(); ctx.ellipse(u.x, uy, 50, 15, 0, 0, 7); ctx.fill();
-            ctx.strokeStyle = '#00f2ff'; ctx.lineWidth = 2; ctx.stroke();
-            
-            // Lights
-            for(let i=0; i<5; i++) {
-                ctx.fillStyle = (Math.floor(Date.now()/150)%5 === i) ? '#0ff' : '#003344';
-                ctx.beginPath(); ctx.arc(u.x - 30 + i*15, uy+3, 3, 0, 7); ctx.fill();
-            }
+            ctx.fillStyle = '#111'; ctx.beginPath(); ctx.ellipse(u.x, uy, 50, 12, 0, 0, 7); ctx.fill();
+            ctx.strokeStyle = '#0ff'; ctx.lineWidth = 2; ctx.stroke();
         }
     },
 
     loop() {
-        App.Canvas.draw();
-        requestAnimationFrame(() => App.loop());
+        Core.Canvas.draw();
+        requestAnimationFrame(() => Core.loop());
     }
 };
 
-window.onload = () => App.init();
+window.onload = () => Core.init();
 </script>
 </body>
 </html>
